src-ken&y/objects/Merge_Field__c.object
<CustomObject>
    <customHelpPage>HelpMerge</customHelpPage>
    <description>Fields that can appear in custom document merges</description>
    <fields>
        <fullName>Database_Field__c</fullName>
        <label>Database Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Database_Label__c</fullName>
        <label>Database Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Field__c</fullName>
        <label>Document Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Table_Name__c</fullName>
        <description>The name of the table in the template that this field will populate one column of</description>
        <inlineHelpText>The name of the table in the template that this field will populate one column of</inlineHelpText>
        <label>Document Table Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Document__c</fullName>
        <label>Merge Document</label>
        <referenceTo>Merge_Document__c</referenceTo>
        <relationshipLabel>Merge Fields</relationshipLabel>
        <relationshipName>Merge_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_List_Name__c</fullName>
        <description>The name of the related list used to generate data for tables</description>
        <inlineHelpText>The name of the related list used to generate data for tables</inlineHelpText>
        <label>Related List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>If specified, this field and order will be applied to the table query</description>
        <inlineHelpText>If specified, this field and order will be applied to the table query</inlineHelpText>
        <label>Sort Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Merge Field</label>
    <nameField>
        <displayFormat>MF-{0000000000}</displayFormat>
        <label>Merge Field</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>